# Decimal_VLN_BCD

./: .gitmodules  CMakeLists.txt  LICENSE  README
include/: Decimal.h  DecimalIntegerDivisionResult.h  DecimalStatus.h  VLN.h  VLNStatus.h
src/: Decimal.cpp  DecimalIntegerDivisionResult.cpp  VLN.cpp
src/tests/: tests.cpp
